# fitutils

./: .Rhistory  .gitignore  .ls-lint.yml  CHANGELOG.md  Cargo.toml  README.md  justfile  lcov.info  trace.txt  unexpected_eof.txt
.chglog/: config.yml
.crumbs/: add-ability-to-handle-multiple-sessions-in-an-activity.md  add-more-testing.md  add-test-to-catch-print-codes-drift-from-actual-hashmap-keys.md  allow-directory-creation-based-on-file-type.md  allow-user-to-specify-stdout-or-stderr-for-errors.md  augment-lap-and-record-info-with-session-lap-info-before-exp.md  better-way-to-serialize-lap-and-record-structs.md  bump-fitparser-to-v0-9-0.md  combine-the-rename-and-move-functions-into-one.md  convert-tcx-activity-start-time-to-datetime.md  create-fitcalc-to-summarize-values-from-files-and-export-to.md  create-fitget-to-download-fit-files-from-garmin.md  create-pr-for-tcx-crate-to-add-creator-and-author-sections.md  create-r-code-to-analyze-the-data.md  crumbs.toml  dig-out-more-information-from-gpx-and-tcx-files-about-the-ac.md  enable-move-on-rename.md  export-detailed-waypoint-data.md  export-tracks-with-segments-and-waypoints-to-csv.md  extract-and-possibly-aggregate-specific-fields.md  figure-out-distance-and-speed-units-and-apply-them-according.md  figure-out-what-to-show-by-default-vs-with-long-parameter.md  fit2json-align-logging-with-other-tools.md  fit2json-document-clap-derive-feature-exception.md  fitrename-enhancements.md  get-a-list-of-waypoints-and-export.md  get-the-list-of-routes-and-export.md  gps-log-extraction.md  implement-serialize-trait-for-track.md  look-into-using-miette-crate-for-better-error-reporting.md  make-all-tcx-values-options-instead-of-straight-values.md  merge-all-the-export-functionality-into-one-tool.md  parse-gpx-file-to-something-meaningful.md  read-gpx-start-time-from-first-track-if-missing-from-activit.md  refactor-gpx2csv-main-into-more-functions.md  remove-duration-module-use-chrono-serde-instead.md  spaces-in-path-from-powershell-cause-fit2csv-to-crash.md  track-rustsec-2026-0173-proc-macro-error2-unmaintained-trans.md  unify-the-data-models-for-fit-gpx-and-tcx.md  use-hashmap-with-capacity-in-fitrename.md  (+1 more)
.github/: dependabot.yml
R/: README.md  sessions.Rmd  sessions.html  sessions.rmd
data/: activity_8250797631.tcx  add_with_overflow.fit  faulty.fit  no_time.gpx  rowing.fit  rowing.gpx  rowing2.fit  running.gpx  running.tcx  test2.fit  test2.json  walking.gpx  walking.tcx  walking2.gpx
docs/plans/: 2026-07-01-fit-sdx.md  2026-07-01-fitdownload.md
fit2csv/: Cargo.toml  README.md
fit2csv/src/: cli.rs  exporters.rs  main.rs  parsers.rs  print_details.rs  types.rs
fit2csv/src/types/: activities.rs  activity.rs  constfunc.rs  duration.rs  hrzones.rs  lap.rs  mod.rs  record.rs  session.rs  timestamp.rs
fit2json/: CHANGELOG.md  Cargo.toml  README.md
fit2json/src/: main.rs  types.rs
fitexport/: Cargo.toml  README.md
fitexport/src/: cli.rs  main.rs
fitrename/: CHANGELOG.md  Cargo.toml  README.md
fitrename/src/: cli.rs  main.rs  move_file.rs  rename_file.rs  shared.rs  timestamp.rs
fitrename/src/fit/: constfunc.rs  mod.rs  session.rs
fitrename/src/gpxx/: gpxmetadata.rs  mod.rs
fitrename/src/tcxx/: activities.rs  mod.rs
fitshow/: CHANGELOG.md  Cargo.toml
fitshow/src/: fit.rs  gpx.rs  main.rs
fitview/: CHANGELOG.md  Cargo.toml  README.md
fitview/src/: cli.rs  main.rs
gpx2csv/: Cargo.toml  README.md
gpx2csv/src/: cli.rs  exporters.rs  main.rs  parsers.rs  types.rs
gpx2csv/src/types/: activities.rs  activity.rs  duration.rs  fix.rs  gpxmetadata.rs  link.rs  mod.rs  person.rs  route.rs  timestamp.rs  track.rs  waypoint.rs
src/: cli.yaml  exporters.rs  main.rs  parse.rs  parser.rs  parsers.rs  print_details.rs  types.rs
tcx2csv/: CHANGELOG.md  Cargo.toml
tcx2csv/src/: cli.rs  main.rs
tcx2csv/src/types/: activities_summary.rs  addons.rs  duration.rs  mod.rs  timestamp.rs  trackpoints.rs
utilities/: CHANGELOG.md  Cargo.toml  README.md
utilities/src/: build_logs.rs  datetime_keys.rs  duration.rs  extensions.rs  glob_expand.rs  lib.rs  macros.rs  rename_file.rs  timestamp.rs
utilities/src/fit/: CHANGELOG.md  activities.rs  activity.rs  constfunc.rs  hrzones.rs  lap.rs  mod.rs  record.rs  serde_helpers.rs  session.rs  to_hashmap.rs
utilities/src/gpx/: activities.rs  activity.rs  fix.rs  gpxmetadata.rs  link.rs  mod.rs  person.rs  route.rs  to_hashmap.rs  track.rs  waypoint.rs
utilities/src/tcx/: activities.rs  activities_summary old.rs  activitiy.rs  activity.rs  mod.rs  to_hashmap.rs  trackpoints.rs
