[workspace]
members = [
    "fit2csv",
    "fit2json",
    "fitrename",
    "fitview",
    "gpx2csv",
    "tcx2csv",
    "utilities",
]

resolver = "2"

[profile.release]
strip = true

[workspace.dependencies]
clap = { version = "4.5.54", features = ["env"] }
log = "0.4.29"
env_logger = "0.11.7"
chrono = "0.4.40"
csv = "1.3.1"
serde = "1.0.219"
fitparser = "0.10.0"
gpx = "0.10.0"
tcx = "0.9.3"
assay = "0.1.1"
convert_case = "0.10.0"
serde_json = "1.0.149"
structopt = "0.3.26"
uom = { version = "0.37.0", default-features = false }
