[workspace]
members = [
    "fit2json",
    "fitexport",
    "fitrename",
    "fitview",
    "utilities",
]

resolver = "2"

[profile.release]
strip = true

[workspace.dependencies]
clap = { version = "4.6.1", features = ["cargo", "env"] }
log = "0.4.33"
env_logger = "0.11.11"
chrono = "0.4.45"
csv = "1.4.0"
serde = "1.0.228"
fitparser = "0.11.0"
gpx = "0.10.0"
tcx = "0.9.3"
assay = "0.1.1"
convert_case = "0.11.0"
serde_json = "1.0.150"
uom = { version = "0.38.0", default-features = false }
