[workspace]
members = [
    "fit2json",
    "fitexport",
    "fitrename",
    "fitview",
    "utilities",
]

resolver = "2"

[profile.release]
strip = true

[workspace.dependencies]
clap = { version = "4", features = ["cargo", "env"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
csv = "1"
serde = "1"
fitparser = "0.11"
gpx = "0.10"
tcx = "0.9"
assay = "0.1"
convert_case = "0.11"
serde_json = "1"
uom = { version = "0.38", default-features = false }
