[package]
name = "fit2csv"
version = "0.5.0"
description = "Parses .FIT files to .JSON and .CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]

[dependencies]
clap = { version = "4.1.13", features = ["cargo", "wrap_help", "env"] }
env_logger = "0.10.0"
log = "0.4.17"

# Our own package
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
