[package]
name = "fit2json"
version = "0.1.4"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
fitparser = "0.6.0"
log = "0.4.18"
serde = "1.0.163"
serde_json = "1.0.96"
structopt = "0.3.26"
