[package]
name = "fit2json"
version = "0.1.4"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
serde = "1.0.187"
serde_json = "1.0.105"
structopt = "0.3.26"

fitparser = { workspace = true }
