[package]
name = "fit2json"
version = "0.1.5"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }

fitparser = { workspace = true }
