[package]
name = "fitexport"
version = "0.1.0"
description = "Exports FIT, GPX, and TCX activity files to JSON and CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]

[dependencies]
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tcx = { workspace = true }

# Our own package
utilities = { path = "../utilities" }

[dev-dependencies]
assay = { workspace = true }
