# cargo-features = ["strip"]

[package]
name = "fitrename"
version = "0.4.0"
edition = "2021"
description = "Renames .FIT, .GPX and .TCX files based on metadata."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["cargo", "wrap_help", "env"] }
env_logger = "0.10.0"
log = "0.4.17"

# Fitness
fitparser = "0.5.1"
gpx = "0.8.6"
tcx = "0.9.3"

# chrono = { version = "0.4", features = ["serde"] }
chrono = "0.4.24"

# Our own package
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
