# cargo-features = ["strip"]

[package]
name = "fitrename"
version = "0.4.3"
edition = "2021"
description = "Renames .FIT, .GPX and .TCX files based on metadata."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Fitness
fitparser = { workspace = true }
gpx  = { workspace = true }
tcx  = { workspace = true }

# chrono = { version = "0.4", features = ["serde"] }
chrono = { workspace = true }

# Our own package
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
