[package]
name = "fitview"
version = "0.3.1"
edition = "2021"
description = "Shows the metadata from .FIT, .GPX and .TCX files."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.12", features = ["cargo", "color"] }
env_logger = "0.10.0"
log = "0.4.16"

# Our own package
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
