[package]
name = "fitview"
version = "0.4.3"
edition = "2021"
description = "Shows the metadata from .FIT, .GPX and .TCX files."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { version = "0.4.31", features = ["serde"] }
clap = { workspace = true }
env_logger = { workspace = true }
log  = { workspace = true }

# Our own package
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
