[package]
name = "gpx2csv"
version = "0.3.0"
description = "Parses .GPX files to .JSON and .CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["cargo", "color"] }
env_logger = "0.9.0"
log = "0.4.16"

# Our own crate
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
