[package]
name = "gpx2csv"
version = "0.4.1"
description = "Parses .GPX files to .JSON and .CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["cargo", "wrap_help"] }
env_logger = "0.10.0"
log = "0.4.17"

# Our own crate
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
