[package]
name = "gpx2csv"
version = "0.4.4"
description = "Parses .GPX files to .JSON and .CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["cargo", "wrap_help"] }
env_logger = { workspace = true }
log = { workspace = true }

# Our own crate
utilities = { path = "../utilities" }

[dev-dependencies]
assay = { workspace = true }
