[package]
name = "tcx2csv"
version = "0.3.1"
edition = "2021"
description = "Parses .TCX files to .JSON and .CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.19"
clap = { version = "4.3.2", features = ["cargo", "wrap_help", "env"] }
env_logger = "0.10.0"
log = "0.4.18"
tcx = "0.9.3"

# Our own crate
utilities = { path = "../utilities" }

[dev-dependencies]
assay = "0.1.1"
