[package]
name = "tcx2csv"
version = "0.3.13"
edition = "2021"
description = "Parses .TCX files to .JSON and .CSV"
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.19"
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tcx = { workspace = true }

# Our own crate
utilities = { path = "../utilities" }

[dev-dependencies]
assay = { workspace = true }
