[package]
name = "utilities"
version = "0.4.5"
edition = "2021"
description = "Shared utility types and functions for the fitness utilities."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
csv = {workspace = true }
serde = {workspace = true }

uom = { version = "0.35.0", default-features = false, features = ["si", "u16", "f64", "use_serde", "autoconvert"] }
serde_json = "1.0.105"
convert_case = "0.6.0"

# Fitness
fitparser = { workspace = true }
gpx = { workspace = true }
tcx = { workspace = true }

[dev-dependencies]
assay = "0.1.1"
