[package]
name = "utilities"
version = "0.4.7"
edition = "2021"
description = "Shared utility types and functions for the fitness utilities."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
csv = {workspace = true }
serde = {workspace = true }

uom = { workspace = true, features = ["si", "u16", "f64", "use_serde", "autoconvert"] }
serde_json = { workspace = true }
convert_case = { workspace = true }

# Fitness
fitparser = { workspace = true }
gpx = { workspace = true }
tcx = { workspace = true }

[dev-dependencies]
assay = { workspace = true }
